# docs/swagger.yaml
@@ -400,6 +400,35 @@ paths:
       summary: Assign Students to Class
       tags:
       - Classes
+  /api/v1/classes/class-id:
+    get:
+      consumes:
+      - application/json
+      description: Fetch class id
+      parameters:
+      - description: Grade
+        in: query
+        name: grade
+        required: true
+        type: integer
+      - description: teacher_id
+        in: query
+        name: teacher_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get class id by grade and logged in teacher
+      tags:
+      - Classes
   /api/v1/classes/details:
     get:
       consumes:
@@ -570,6 +599,38 @@ paths:
       security:
       - BearerAuth: []
       summary: Create Material
+      tags:
+      - Materials
+  /api/v1/materials/from-class:
+    get:
+      consumes:
+      - application/json
+      description: Fetch materials by class id from the database with pagination
+      parameters:
+      - description: Class ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Number of items per page (default: 15)'
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get Materials by class id
       tags:
       - Materials
   /api/v1/ping:
